css/style.css
@import url(https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css) layer(format);
@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');

:root {
    --clr-retro-red : #FE2F01;
    --clr-retro-brown: #A58B00;
    --clr-retro-blue: #028DBF;
}
body {
    font-family: 'Karla', sans-serif;
}
.page-wrapper {
    margin-top: 20px;
    margin-bottom: 20px;
}
h1 {
    font-size: 60px;
}
a.nav-link {
    border: var(--clr-retro-red) solid;
    border-radius: 60px;
    background-color: var(--clr-retro-red);
    font: #fff;
}
li.nav-item a.nav-link {
    margin-left: 20px;
}
li form.d-flex {
    margin-left: 20px;
}
a.navbar-brand {
    transition: all ease 0.3s;
}
a.navbar-brand:hover {
    color: var(--clr-retro-brown);
}

.apply-2p {
    font-family: 'Press start 2p', sans-serif;
    word-spacing: -7px;
}

.slide-left {
    animation: slide-in-left 1s;
}
@keyframes slide-in-left {
    0% {
        opacity: 0;
        transform: translateX(-50%);
    }
    100% {
        opacity: 1;
        transform: translateX(0%);
    }
}
.mushroom-icon {
    height: 25px;
}
.build-pizza {
    width: 70%;
    display: flex;
    justify-content: left;
    padding-top: 40px;
}
nav.navbar {
    padding: unset;
}
.hero-img {
    max-height: 600px;
    padding-top: 10px;
}
nav div.container-fluid {
    padding: unset;
}
.menu-icon {
    opacity: 0.85;
    transition: all ease 0.3s;
}
.menu-icon:hover {
    opacity: 1;
    transform: scale(1.1);
}
@keyframes walk {
    0% {
        transform: translateX(0);
    }
    50% {
        transform: translateX(10vw);
    }
    80% {
        transform: translateX(10vw);
    }
}

.walking-image {
    margin-top: 5px;
    animation: walk 1s linear forwards;
}

.hero-header {
    text-align: center;
    padding-left: 210px;
    padding-right: 0;
    font-family: 'Press start 2p', sans-serif;

}

.hero-left-align {
    text-align: left;
    font-family: 'Karla', sans-serif;
}

.btn-marg {
    margin-top: 5px;
}

footer{
    background-image: ;
}

